[gd_scene load_steps=79 format=2]

[ext_resource path="res://scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://scenes/Personagem.gd" type="Script" id=2]
[ext_resource path="res://assets/flatboy/Idle (1).png" type="Texture" id=3]
[ext_resource path="res://assets/flatboy/Idle (2).png" type="Texture" id=4]
[ext_resource path="res://assets/flatboy/Idle (3).png" type="Texture" id=5]
[ext_resource path="res://assets/flatboy/Idle (4).png" type="Texture" id=6]
[ext_resource path="res://assets/flatboy/Idle (5).png" type="Texture" id=7]
[ext_resource path="res://assets/flatboy/Idle (6).png" type="Texture" id=8]
[ext_resource path="res://assets/flatboy/Idle (7).png" type="Texture" id=9]
[ext_resource path="res://assets/flatboy/Idle (8).png" type="Texture" id=10]
[ext_resource path="res://assets/flatboy/Idle (9).png" type="Texture" id=11]
[ext_resource path="res://assets/flatboy/Idle (10).png" type="Texture" id=12]
[ext_resource path="res://assets/flatboy/Idle (11).png" type="Texture" id=13]
[ext_resource path="res://assets/flatboy/Idle (12).png" type="Texture" id=14]
[ext_resource path="res://assets/flatboy/Idle (13).png" type="Texture" id=15]
[ext_resource path="res://assets/flatboy/Idle (14).png" type="Texture" id=16]
[ext_resource path="res://assets/flatboy/Idle (15).png" type="Texture" id=17]
[ext_resource path="res://assets/flatboy/Walk (1).png" type="Texture" id=18]
[ext_resource path="res://assets/flatboy/Walk (2).png" type="Texture" id=19]
[ext_resource path="res://assets/flatboy/Walk (3).png" type="Texture" id=20]
[ext_resource path="res://assets/flatboy/Walk (4).png" type="Texture" id=21]
[ext_resource path="res://assets/flatboy/Walk (5).png" type="Texture" id=22]
[ext_resource path="res://assets/flatboy/Walk (6).png" type="Texture" id=23]
[ext_resource path="res://assets/flatboy/Walk (7).png" type="Texture" id=24]
[ext_resource path="res://assets/flatboy/Walk (8).png" type="Texture" id=25]
[ext_resource path="res://assets/flatboy/Walk (9).png" type="Texture" id=26]
[ext_resource path="res://assets/flatboy/Walk (10).png" type="Texture" id=27]
[ext_resource path="res://assets/flatboy/Walk (11).png" type="Texture" id=28]
[ext_resource path="res://assets/flatboy/Walk (12).png" type="Texture" id=29]
[ext_resource path="res://assets/flatboy/Walk (13).png" type="Texture" id=30]
[ext_resource path="res://assets/flatboy/Walk (14).png" type="Texture" id=31]
[ext_resource path="res://assets/flatboy/Walk (15).png" type="Texture" id=32]
[ext_resource path="res://assets/flatboy/Dead (1).png" type="Texture" id=33]
[ext_resource path="res://assets/flatboy/Dead (2).png" type="Texture" id=34]
[ext_resource path="res://assets/flatboy/Dead (3).png" type="Texture" id=35]
[ext_resource path="res://assets/flatboy/Dead (4).png" type="Texture" id=36]
[ext_resource path="res://assets/flatboy/Dead (5).png" type="Texture" id=37]
[ext_resource path="res://assets/flatboy/Dead (6).png" type="Texture" id=38]
[ext_resource path="res://assets/flatboy/Dead (7).png" type="Texture" id=39]
[ext_resource path="res://assets/flatboy/Dead (8).png" type="Texture" id=40]
[ext_resource path="res://assets/flatboy/Dead (9).png" type="Texture" id=41]
[ext_resource path="res://assets/flatboy/Dead (10).png" type="Texture" id=42]
[ext_resource path="res://assets/flatboy/Dead (11).png" type="Texture" id=43]
[ext_resource path="res://assets/flatboy/Dead (12).png" type="Texture" id=44]
[ext_resource path="res://assets/flatboy/Dead (13).png" type="Texture" id=45]
[ext_resource path="res://assets/flatboy/Dead (14).png" type="Texture" id=46]
[ext_resource path="res://assets/flatboy/Dead (15).png" type="Texture" id=47]
[ext_resource path="res://assets/jump.wav" type="AudioStream" id=48]
[ext_resource path="res://scenes/platMovel.tscn" type="PackedScene" id=49]
[ext_resource path="res://assets/Botoes/esquerda0.png" type="Texture" id=50]
[ext_resource path="res://assets/Botoes/esquerda1.png" type="Texture" id=51]
[ext_resource path="res://assets/Botoes/direita0.png" type="Texture" id=52]
[ext_resource path="res://assets/Botoes/direita1.png" type="Texture" id=53]
[ext_resource path="res://assets/Botoes/cima0.png" type="Texture" id=54]
[ext_resource path="res://assets/Botoes/cima1.png" type="Texture" id=55]
[ext_resource path="res://assets/coin48.png" type="Texture" id=56]
[ext_resource path="res://assets/hud_heartFull.png" type="Texture" id=57]
[ext_resource path="res://assets/fontnova.tres" type="DynamicFont" id=58]
[ext_resource path="res://assets/key.png" type="Texture" id=59]
[ext_resource path="res://scenes/key.tscn" type="PackedScene" id=60]
[ext_resource path="res://assets/Tiles/lock_yellow.png" type="Texture" id=61]
[ext_resource path="res://scenes/Stage1.tscn" type="PackedScene" id=62]
[ext_resource path="res://assets/background.png" type="Texture" id=63]
[ext_resource path="res://assets/coin.wav" type="AudioStream" id=64]
[ext_resource path="res://assets/ded.wav" type="AudioStream" id=65]
[ext_resource path="res://assets/win.wav" type="AudioStream" id=66]
[ext_resource path="res://assets/box.wav" type="AudioStream" id=67]
[ext_resource path="res://assets/key.wav" type="AudioStream" id=68]
[ext_resource path="res://assets/stage.ogg" type="AudioStream" id=69]
[ext_resource path="res://assets/castle.ogg" type="AudioStream" id=70]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "idle",
"speed": 15.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ) ],
"loop": true,
"name": "walking",
"speed": 30.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ) ],
"loop": false,
"name": "death",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.5586, 64.7421 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 29.3335, 2.79971 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32.5586, 64.1288 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 32.3955, 2 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.976471, 0.976471, 0.976471, 0.313726 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.345098, 0.74902, 0.352941, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.937255, 0.713726, 0.121569, 0.352941 )
border_width_left = 5
border_width_right = 5
border_color = Color( 0.839216, 0.615686, 0.137255, 1 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 54.3838, 59.644 )

[node name="The Game" type="Node2D"]
script = ExtResource( 1 )

[node name="spawn_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Personagem" type="KinematicBody2D" parent="."]
position = Vector2( 726.178, 459.388 )
z_index = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="Personagem"]
position = Vector2( -47, 0 )
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 1 )
animation = "death"
frame = 14
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Personagem"]
visible = false
position = Vector2( -54, 0 )
shape = SubResource( 2 )

[node name="rayE" type="RayCast2D" parent="Personagem"]
position = Vector2( -85.1561, 61.8933 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 2

[node name="rayD" type="RayCast2D" parent="Personagem"]
position = Vector2( -22.5622, 62 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 2

[node name="SomJump" type="AudioStreamPlayer" parent="Personagem"]
stream = ExtResource( 48 )

[node name="Camera2D" type="Camera2D" parent="Personagem"]
current = true
limit_left = 0
limit_bottom = 800
smoothing_enabled = true

[node name="pes" type="Area2D" parent="Personagem"]
collision_layer = 1024
collision_mask = 8192

[node name="CollisionShape2D" type="CollisionShape2D" parent="Personagem/pes"]
position = Vector2( -54.1707, 69.4644 )
shape = SubResource( 3 )

[node name="corpo" type="Area2D" parent="Personagem"]
collision_layer = 1024
collision_mask = 8192

[node name="CollisionShape2D" type="CollisionShape2D" parent="Personagem/corpo"]
position = Vector2( -54, 1 )
shape = SubResource( 4 )

[node name="cabeca" type="Area2D" parent="Personagem"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Personagem/cabeca"]
position = Vector2( -54, -66 )
shape = SubResource( 5 )

[node name="Plataformas" type="Node2D" parent="."]
visible = false

[node name="platMovel" parent="Plataformas" instance=ExtResource( 49 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2
scale = Vector2( 3, 3 )
transform = Transform2D( 3, 0, 0, 3, 0, 0 )

[node name="controles" type="Node2D" parent="CanvasLayer"]
position = Vector2( -1.7581, -1.75809 )

[node name="touchleft" type="TouchScreenButton" parent="CanvasLayer/controles"]
position = Vector2( 4.7087, 201.364 )
normal = ExtResource( 50 )
pressed = ExtResource( 51 )

[node name="touchright" type="TouchScreenButton" parent="CanvasLayer/controles"]
position = Vector2( 48.9703, 202.007 )
normal = ExtResource( 52 )
pressed = ExtResource( 53 )

[node name="touchup" type="TouchScreenButton" parent="CanvasLayer/controles"]
position = Vector2( 379.696, 201.531 )
normal = ExtResource( 54 )
pressed = ExtResource( 55 )

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer2"]
margin_right = 1280.0
margin_bottom = 100.0
custom_styles/panel = SubResource( 6 )

[node name="moeda" type="Sprite" parent="CanvasLayer2/Panel"]
position = Vector2( 49, 49 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 56 )
hframes = 61

[node name="heart3" type="TextureRect" parent="CanvasLayer2/Panel"]
margin_left = 1044.0
margin_top = 14.0
margin_right = 1129.0
margin_bottom = 86.0
texture = ExtResource( 57 )
expand = true

[node name="heart2" type="TextureRect" parent="CanvasLayer2/Panel"]
margin_left = 955.0
margin_top = 15.0
margin_right = 1040.0
margin_bottom = 87.0
texture = ExtResource( 57 )
expand = true

[node name="heart1" type="TextureRect" parent="CanvasLayer2/Panel"]
margin_left = 868.0
margin_top = 14.0
margin_right = 953.0
margin_bottom = 86.0
texture = ExtResource( 57 )
expand = true

[node name="time" type="Label" parent="CanvasLayer2/Panel"]
margin_left = 594.894
margin_top = 11.5369
margin_right = 756.894
margin_bottom = 120.537
custom_fonts/font = ExtResource( 58 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "30"

[node name="gg" type="Label" parent="CanvasLayer2/Panel"]
margin_left = 291.136
margin_top = 96.967
margin_right = 1191.14
margin_bottom = 205.967
custom_fonts/font = ExtResource( 58 )
text = "Fase concluida!"

[node name="gg2" type="Label" parent="CanvasLayer2/Panel"]
visible = false
margin_left = 432.088
margin_top = 283.487
margin_right = 1332.08
margin_bottom = 392.487
custom_fonts/font = ExtResource( 58 )
text = "Game Over"

[node name="PanelKey" type="Panel" parent="CanvasLayer2/Panel"]
margin_left = 1169.66
margin_top = 2.0
margin_right = 1274.66
margin_bottom = 98.0
custom_styles/panel = SubResource( 7 )

[node name="key" type="TextureRect" parent="CanvasLayer2/Panel/PanelKey"]
visible = false
margin_left = 8.89893
margin_top = 2.8989
margin_right = 94.8989
margin_bottom = 88.8989
texture = ExtResource( 59 )
expand = true

[node name="moedas" type="Label" parent="CanvasLayer2"]
margin_left = 114.686
margin_top = 12.4864
margin_right = 195.686
margin_bottom = 121.486
custom_fonts/font = ExtResource( 58 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"

[node name="Chave" parent="." instance=ExtResource( 60 )]
position = Vector2( 5732.77, -813.411 )

[node name="the end" type="Area2D" parent="."]
position = Vector2( 6926.98, 517.97 )
collision_layer = 0

[node name="door" type="Sprite" parent="the end"]
position = Vector2( 3637.79, 152.853 )
scale = Vector2( 1.56125, 1.64895 )
texture = ExtResource( 61 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="the end"]
position = Vector2( 3638.9, 156.052 )
shape = SubResource( 8 )

[node name="game_time" type="Timer" parent="."]
wait_time = 300.0
one_shot = true
autostart = true

[node name="Stage1" parent="." instance=ExtResource( 62 )]

[node name="camera" type="Camera2D" parent="."]
limit_left = 0
limit_bottom = 800

[node name="spawn_point" type="Position2D" parent="."]
position = Vector2( 710.726, 471.13 )

[node name="Node2D" type="Node2D" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color( 1, 1, 1, 0.494118 )
position = Vector2( 425.381, -348.976 )
scale = Vector2( 1.26935, 1.26935 )
texture = ExtResource( 63 )
offset = Vector2( 845.611, -8.97784 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color( 1, 1, 1, 0.494118 )
position = Vector2( 3564.92, -349.976 )
scale = Vector2( 1.26935, 1.26935 )
texture = ExtResource( 63 )
offset = Vector2( 845.611, -8.97784 )

[node name="Sprite3" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color( 1, 1, 1, 0.494118 )
position = Vector2( 6705.46, -354.608 )
scale = Vector2( 1.26935, 1.26935 )
texture = ExtResource( 63 )
offset = Vector2( 845.611, -8.97784 )

[node name="Sprite4" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color( 1, 1, 1, 0.494118 )
position = Vector2( 9845.71, -352.905 )
scale = Vector2( 1.26935, 1.26935 )
texture = ExtResource( 63 )
offset = Vector2( 845.611, -8.97784 )

[node name="SomCoin" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 64 )

[node name="SomDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 65 )

[node name="SomGG" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 66 )

[node name="SomBox" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 67 )

[node name="SomKey" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 68 )

[node name="stagemusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 69 )

[node name="stage2music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 70 )
[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_timeout"]
[connection signal="enekill" from="Personagem" to="." method="_on_Personagem_enekill"]
[connection signal="fim" from="Personagem" to="." method="_on_Personagem_fim"]
[connection signal="keygot" from="Personagem" to="." method="_on_Personagem_keygot"]
[connection signal="moeda" from="Personagem" to="." method="_on_Personagem_moeda"]
[connection signal="morreu" from="Personagem" to="." method="_on_Personagem_morreu"]
[connection signal="body_entered" from="Personagem/pes" to="Personagem" method="_on_pes_body_entered"]
[connection signal="body_entered" from="Personagem/corpo" to="Personagem" method="_on_corpo_body_entered"]
[connection signal="body_entered" from="Personagem/cabeca" to="Personagem" method="_on_cabeca_body_entered"]
[connection signal="pressed" from="CanvasLayer/controles/touchleft" to="Personagem" method="_on_touchleft_pressed"]
[connection signal="released" from="CanvasLayer/controles/touchleft" to="Personagem" method="_on_touchleft_released"]
[connection signal="pressed" from="CanvasLayer/controles/touchright" to="Personagem" method="_on_touchright_pressed"]
[connection signal="released" from="CanvasLayer/controles/touchright" to="Personagem" method="_on_touchright_released"]
[connection signal="pressed" from="CanvasLayer/controles/touchup" to="Personagem" method="_on_touchup_pressed"]
[connection signal="released" from="CanvasLayer/controles/touchup" to="Personagem" method="_on_touchup_released"]
[connection signal="body_entered" from="Chave" to="Personagem" method="_on_Chave_body_entered"]
[connection signal="body_entered" from="the end" to="Personagem" method="_on_the_end_body_entered"]
[connection signal="timeout" from="game_time" to="Personagem" method="_on_game_time_timeout"]
